chore(project): update Java version to 22 and enable preview features. - fix curly braces mismatch